--- a/1-carteEcommerce/style.css
+++ b/1-carteEcommerce/style.css
@@ -15,16 +15,24 @@ body {
 .cartes {
     background: #f1f1f1;
     width: 300px;
-    height: 550px;
+    height: 500px;
     flex-shrink: 0;
     border-radius: 5px;
     margin: 0 25px;
     box-shadow: 0px 10px 25px rgba(0,0,0,.4);
 }
+.img1 {
+    background: url("./img/tshirt1.png");
+}
+.img2 {
+    background: url("./img/tshirt2.png");
+}
+.img3 {
+    background: url("./img/tshirt3.png");
+}
 .partImg {
    height: 60%;
    width: 100%; 
-   background: url("./img/tshirt1.png");
    background-position: top;
    position: relative;
    border-bottom: 1px solid rgba(0,0,0,.1);
@@ -43,4 +51,105 @@ body {
 .filtreBleu:hover {
     cursor: pointer;
     background: rgba(118,176,194,.5);
+}
+.btnReveal {
+    width: 100px;
+    height: 40px;
+    background: #f1f1f1;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(118, 176, 194);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    opacity: 0;
+    transition: opacity 0.4s ease-in-out;
+}
+.filtreBleu:hover .btnReveal{
+    opacity: 1;
+}
+.titrePrix {
+    display: flex;
+    padding: 10px;
+    width: 100%;
+}
+.titreCarte {
+    display: flex;
+    align-items: center;
+    margin: 0;
+    width: 80%;
+    font-size: 25px;
+    position: relative;
+}
+.titreCarte::after {
+    content: "Men's running shirt";
+    font-weight: 100;
+    font-size: 14px;
+    position: absolute;
+    top: 35px;
+}
+.prix {
+    width: 18%;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+}
+.tailles {
+    padding: 10px 10px;
+    width: 100%;
+}
+.taillesTxt {
+    margin: 0;
+    font-weight: bold;
+    position: relative;
+    font-size: 18px;
+}
+.taillesTxt::after {
+    content: "S,  M,  L, Xl";
+    font-weight: 1;
+    opacity: 0.7;
+    font-size: 16px;
+    position: absolute;
+    top: 20px;
+    left: 0px;
+}
+.colors {
+    padding: 10px 10px;
+    width: 100%;
+}
+.sousTitreC {
+    padding-bottom: 5px;
+    font-size: 20px;
+    margin: 0;
+}
+.contRonds {
+   width: 100%;
+   display: flex;
+}
+.ronds {
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    background: #000;
+    margin-right: 5px;
+    cursor: pointer;
+}
+.ronds:nth-child(1) {
+    background: #000;
+}
+.ronds:nth-child(2) {
+    background: rgb(155,155,155);
+}
+.ronds:nth-child(3) {
+    background: #fff;
+    border: 0.1px solid rgba(0, 0, 0, .1);
+}
+.ronds:nth-child(4) {
+    background: crimson;
+}
+.ronds:nth-child(5) {
+    background: salmon;
 }
