--- a/3-CartesImageOversize/style.css
+++ b/3-CartesImageOversize/style.css
@@ -19,7 +19,9 @@ body{
     bottom: #f1f1f1;
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, .5);
+    margin: 60px 60px;
 }
 
 .deg {
